tests/ui/higher-ranked/leak-check/candidate-from-env-universe-err-1.next.stderr
error[E0277]: the trait bound `for<'a> &'a &T: Trait` is not satisfied
  --> $DIR/candidate-from-env-universe-err-1.rs:27:16
   |
LL |     hr_bound::<&T>();
   |                ^^ the trait `for<'a> Trait` is not implemented for `&'a &T`
   |
note: required by a bound in `hr_bound`
  --> $DIR/candidate-from-env-universe-err-1.rs:14:20
   |
LL | fn hr_bound<T>()
   |    -------- required by a bound in this function
LL | where
LL |     for<'a> &'a T: Trait,
   |                    ^^^^^ required by this bound in `hr_bound`
help: consider removing the leading `&`-reference
   |
LL -     hr_bound::<&T>();
LL +     hr_bound::<T>();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
